# ArchitecturePatternsWithPython

./: .gitignore  README.md  conftest.py  model.py  models.py  orm.py  pyproject.toml  repository.py  test_allocate.py  test_batches.py  test_orm.py  test_repository.py
.devcontainer/: Dockerfile  devcontainer.json  get_poetry_venv_path.sh
docs/: notes.md
