[tool.poetry]
name = "architecture-pattersn-with-python"
version = "0.1.0"
description = "Architecture Patterns with Python"
authors = ["niels@heirbaut.nl"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
