[project]
name = "architecture-pattersn-with-python"
version = "0.1.0"
description = "Architecture Patterns with Python"
authors = ["niels@heirbaut.nl"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.387",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
